# Qt-thread-test

./: .gitignore  CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  toola.cpp  toola.h
fake_send&recv/: fake_SR.cpp  fake_SR.h  ntlog.cpp  ntlog.h
std-thread/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
